--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -46,7 +46,8 @@
   <div class="container" id="game_container">
     <!--<div class="game"> -->
       <div id="game_board">
-        <div id="game_header">
+
+          <div id="game_header">
           <div id="help_button">
           </div>
           <div class="student_name_box" style="display:none" id="card_listener">
@@ -62,6 +63,7 @@
             <div class="student_role_label">Card Reader</div>
           </div>
         </div>
+        <div id="face"></div>
         <div id="stimulus">
           <div class="stage" id="stagex"></div>
         </div>
