--- a/www/index.html
+++ b/www/index.html
@@ -52,9 +52,10 @@
     <!--<div class="game"> -->
       <div id="game_board">
 
-          <div id="game_header">
-          <div id="help_button">
-          </div>
+          <div id="game_header"></div>
+          <div id="help_button"></div>
+          <div class="game_button" id="start"><p>Start<p></div>
+          
           <div class="student_name_box" style="display:none" id="card_listener">
             <div class="student_name_label">Card Listener</div><br>
             <div class="student_role_label">Card Listener</div>
