--- a/www/index.html
+++ b/www/index.html
@@ -54,7 +54,7 @@
 
           <div id="game_header"></div>
           <div id="help_button"></div>
-          <div class="game_button" id="start"><p>Start<p></div>
+          <div id="game_button" ><p>Start<p></div>
           
           <div class="student_name_box" style="display:none" id="card_listener">
             <div class="student_name_label">Card Listener</div><br>
