fix button size and color

--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -16,7 +16,9 @@
 </head>
 
 <body>
+<!--
 <div id="debug"></div>
+-->
 <div id="container"></div>
 <div id="dialog-message" title="Download complete">
   <div id="dialog_text"></div>
@@ -50,9 +52,10 @@
     <!--<div class="game"> -->
       <div id="game_board">
 
-          <div id="game_header">
-          <div id="help_button">
-          </div>
+          <div id="game_header"></div>
+          <div id="help_button"></div>
+          <div id="game_button" ><p>Start<p></div>
+          
           <div class="student_name_box" style="display:none" id="card_listener">
             <div class="student_name_label">Card Listener</div><br>
             <div class="student_role_label">Card Listener</div>
